--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,54 +15,54 @@
     </string-array>
     <string name="title_activity_match_histry">matchHistry</string>
     <string name="button">Button</string>
-    <string name="textview">TextView</string>
-    <string name="textview">TextView</string>
-    <string name="todo">TODO</string>
+    <string name="textview1">TextView</string>
+    <string name="textview2">TextView</string>
+    <string name="todo1">TODO</string>
     <string name="title_activity_mylist">mylist</string>
-    <string name="textview">TextView</string>
-    <string name="todo">TODO</string>
+    <string name="textview3">TextView</string>
+    <string name="todo2">TODO</string>
     <string name="time">time</string>
     <string name="outcome">outcome</string>
     <string name="kda">kda</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
-    <string name="todo">TODO</string>
+    <string name="todo3">TODO</string>
+    <string name="todo4">TODO</string>
+    <string name="todo5">TODO</string>
+    <string name="todo6">TODO</string>
+    <string name="todo7">TODO</string>
+    <string name="todo8">TODO</string>
+    <string name="todo9">TODO</string>
+    <string name="todo10">TODO</string>
+    <string name="todo11">TODO</string>
+    <string name="todo12">TODO</string>
+    <string name="todo13">TODO</string>
+    <string name="todo14">TODO</string>
+    <string name="todo15">TODO</string>
+    <string name="todo16">TODO</string>
+    <string name="todo17">TODO</string>
+    <string name="todo18">TODO</string>
+    <string name="todo19">TODO</string>
+    <string name="todo20">TODO</string>
+    <string name="todo21">TODO</string>
+    <string name="todo22">TODO</string>
+    <string name="todo23">TODO</string>
+    <string name="todo24">TODO</string>
+    <string name="todo25">TODO</string>
+    <string name="todo27">TODO</string>
+    <string name="todo26">TODO</string>
+    <string name="todo28">TODO</string>
+    <string name="todo29">TODO</string>
+    <string name="todo30">TODO</string>
+    <string name="todo31">TODO</string>
+    <string name="todo32">TODO</string>
+    <string name="todo33">TODO</string>
+    <string name="todo34">TODO</string>
+    <string name="todo35">TODO</string>
+    <string name="todo36">TODO</string>
+    <string name="todo37">TODO</string>
+    <string name="todo38">TODO</string>
+    <string name="todo39">TODO</string>
+    <string name="todo40">TODO</string>
+    <string name="todo41">TODO</string>
     <string name="title_activity_match_history_adapter">MatchHistoryAdapter</string>
     <string name="todo">TODO</string>
     <string name="textview">TextView</string>
